# ai-ready-modern-python-template

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .ruff.toml  .yamllint  AGENTS.md  Dockerfile  Makefile  README.md  copier.yml  mise.toml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: other-modern-python-tools.md
docs/superpowers/specs/: 2026-07-07-copier-template-design.md
scripts/: answers-everything-off.yml  answers-everything-on.yml  test-generation.sh  test-render-contracts.sh
scripts/mise/: format-python.sh  lint-dockerfile.sh  lint-gha-security.sh  lint-github-actions.sh  lint-json.sh  lint-python-deep.sh  lint-python-fast.sh  lint-sh.sh  lint-toml.sh  test.sh
src/app/: __init__.py
template/: .dockerignore.jinja  .pre-commit-config.yaml.jinja  .ruff.toml.jinja  .yamllint  AGENTS.md.jinja  README.md.jinja  mise.toml.jinja  pyproject.toml.jinja  {% if 'markdownlint' in extra_linters %}.markdownlint-cli2.jsonc{% endif %}.jinja  {% if license == 'MIT' %}LICENSE{% endif %}.jinja  {% if use_docker %}Dockerfile{% endif %}.jinja
template/docs/: lint-strategy.md
template/{% if use_github_actions %}.github{% endif %}/: dependabot.yml.jinja
template/{% if use_github_actions %}.github{% endif %}/workflows/: ci.yml.jinja
tests/: test_smoke.py
